--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 sudo: false
 dist: trusty
 language: rust
+rust: nightly-2019-05-09 # minimum required version for async/await
 
 before_install:
-  - cargo install mdbook --vers '0.2.2' --debug --force
+  - cargo install mdbook --vers '0.2.3' --debug --force
+  - cargo install mdbook-linkcheck --vers '0.2.4' --debug --force
 
 script:
   - mdbook build
+  - cargo test --all --manifest-path=./examples/Cargo.toml
 
 deploy:
   provider: pages
