--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: false
 dist: trusty
 language: rust
+cache: cargo
 rust: nightly-2019-05-09 # minimum required version for async/await
 
 before_install:
@@ -9,7 +10,7 @@ before_install:
 
 script:
   - mdbook build
-  - cargo test --all --manifest-path=./examples/Cargo.toml
+  - cargo test --all --manifest-path=./examples/Cargo.toml --target-dir ./target
 
 env:
   RUSTINFRA_DEPLOY_DIR: book
