config(pages): try to build pages with zh-CN

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,13 @@ before_install:
   - cargo install mdbook-linkcheck --vers '0.3.1' --debug --force
 
 script:
+  - rm -rf ./src
   - mdbook build
   - cargo test --all --manifest-path=./examples/Cargo.toml --target-dir ./target
 
+branches:
+  only:
+    - zh-CN
 env:
   RUSTINFRA_DEPLOY_DIR: book/html
 import:
