--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,11 @@ env:
   RUSTINFRA_DEPLOY_DIR: book/html
 import:
   - rust-lang/simpleinfra/travis-configs/static-websites.yml
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: zh-CN
