--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,6 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-  keep_history: true
+  keep_history: false
   on:
     branch: zh-CN
