change back to build branch
the issue of wrong target directory still need fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ deploy:
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep_history: false
   on:
-    branch: gh-pages
+    branch: zh-CN
