--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ import:
 
 deploy:
   provider: pages
+  Local_dir: $RUSTINFRA_DEPLOY_DIR
   skip_cleanup: true
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep_history: false
