--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 
 branches:
   only:
-    - zh-CN
+    - master
 env:
   RUSTINFRA_DEPLOY_DIR: book/html
 import:
@@ -29,4 +29,4 @@ deploy:
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep_history: false
   on:
-    branch: zh-CN
+    branch: master
