--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ dist: trusty
 language: rust
 cache: cargo
 rust: nightly-2019-08-21 # minimum required version for async/await
+addons:
+  apt:
+    packages:
+      - aspell
+      - aspell-en
 
 before_install:
   - cargo install mdbook --vers '0.3.1' --debug --force
