--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ addons:
       - aspell
       - aspell-en
 
-before_install:
-  - cargo install mdbook --vers '0.3.1' --debug --force
-  - cargo install mdbook-linkcheck --vers '0.3.1' --debug --force
+before_script:
+  - (test -x $HOME/.cargo/bin/cargo-install-update || cargo install cargo-update)
+  - (test -x $HOME/.cargo/bin/mdbook || cargo install --vers "0.3.1" --debug --force mdbook)
+  - (test -x $HOME/.cargo/bin/mdbook-linkcheck || cargo install --vers "0.3.1" --debug --force mdbook-linkcheck)
+  - cargo install-update -a
 
 script:
   - bash ci/spellcheck.sh list
