--- a/book.toml
+++ b/book.toml
@@ -8,6 +8,7 @@ create-missing = false
 [preprocess.links]
 
 [output.html]
+git-repository-url = "https://github.com/rust-lang/async-book"
 
 [output.linkcheck]
 follow-web-links = true
