--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: false
 dist: trusty
 language: rust
 cache: cargo
-rust: nightly-2019-08-21 # minimum required version for async/await
+rust: stable
 addons:
   apt:
     packages:
