--- a/examples/02_03_timer/Cargo.toml
+++ b/examples/02_03_timer/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 [lib]
 
 [dependencies]
-futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
+futures = "0.3"
