--- a/.travis.yml
+++ b/.travis.yml
@@ -29,13 +29,4 @@ before_cache:
 env:
   RUSTINFRA_DEPLOY_DIR: book/html
 import:
-  - rust-lang/simpleinfra/travis-configs/static-websites.yml
-
-deploy:
-  provider: pages
-  local_dir: $RUSTINFRA_DEPLOY_DIR
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-  keep_history: false
-  on:
-    branch: master
+  - rust-lang/simpleinfra:travis-configs/static-websites.yml
