--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ before_cache:
 env:
   RUSTINFRA_DEPLOY_DIR: book/html
 import:
-  - rust-lang/simpleinfra/travis-configs/static-websites.yml
+  - rust-lang/simpleinfra:travis-configs/static-websites.yml
