--- a/examples/02_04_executor/Cargo.toml
+++ b/examples/02_04_executor/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "02_04_executor"
+name = "example_02_04_executor"
 version = "0.1.0"
 authors = ["Taylor Cramer <cramertj@google.com>"]
 edition = "2018"
@@ -8,4 +8,4 @@ edition = "2018"
 
 [dependencies]
 futures = "0.3"
-timer_future = { package = "02_03_timer", path = "../02_03_timer" }
+timer_future = { package = "example_02_03_timer", path = "../02_03_timer" }
