--- a/examples/03_01_async_await/Cargo.toml
+++ b/examples/03_01_async_await/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "03_01_async_await"
+name = "example_03_01_async_await"
 version = "0.1.0"
 authors = ["Taylor Cramer <cramertj@google.com>"]
 edition = "2018"
