--- a/examples/05_01_streams/Cargo.toml
+++ b/examples/05_01_streams/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "05_01_streams"
+name = "example_05_01_streams"
 version = "0.1.0"
 authors = ["Taylor Cramer <cramertj@google.com>"]
 edition = "2018"
