--- a/examples/06_02_join/Cargo.toml
+++ b/examples/06_02_join/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "06_02_join"
+name = "example_06_02_join"
 version = "0.1.0"
 authors = ["Taylor Cramer <cramertj@google.com>"]
 edition = "2018"
