--- a/examples/06_03_select/Cargo.toml
+++ b/examples/06_03_select/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "06_03_select"
+name = "example_06_03_select"
 version = "0.1.0"
 authors = ["Taylor Cramer <cramertj@google.com>"]
 edition = "2018"
