--- a/examples/07_05_recursion/Cargo.toml
+++ b/examples/07_05_recursion/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "07_05_recursion"
+name = "example_07_05_recursion"
 version = "0.1.0"
 authors = ["Taylor Cramer <cramertj@google.com>"]
 edition = "2018"
