--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -11,5 +11,6 @@ members = [
   "05_02_iteration_and_concurrency",
   "06_02_join",
   "06_03_select",
+  "06_05_futuresunordered",
   "07_05_recursion",
 ]
