--- a/examples/08_03_concurrent_tcp_server/Cargo.toml
+++ b/examples/08_03_concurrent_tcp_server/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-async-std = "1.6"
+[dependencies.async-std]
+version = "1.6"
+features = ["attributes"]
