--- a/examples/08_05_final_tcp_server/Cargo.toml
+++ b/examples/08_05_final_tcp_server/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = "1.6"
 futures = "0.3"
+
+[dependencies.async-std]
+version = "1.6"
+features = ["attributes"]
