Introduce concurrency before multithreading

--- a/examples/08_03_slow_request/Cargo.toml
+++ b/examples/08_03_slow_request/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nonblocking_tcp_server"
+name = "slow_request"
 version = "0.1.0"
 authors = ["Your Name <you@example.com"]
 edition = "2018"
